# mlscorecheck

./: .coveragerc  .flake8  .gitignore  .pylintrc  00_intervals-auc-kfold.ipynb  CODE_OF_CONDUCT.md  LICENSE  README.rst  cspell.json  pyproject.toml  requirements.txt  setup.py
.github/: codecov.yml
.github/workflows/: README.md  build.yml  codecov.yml  docs.yml  pythonpackage.yml  pythonpublish.yml  release.yml
docs/: 00_introduction.rst  01a_requirements.rst  01b_specifying_setup.rst  01c_consistency_checking.rst  02a_bundle_intro.rst  02b_retina.rst  02c_ehg.rst  02d_contribution.rst  02e_skinlesion.rst  03_api.rst  04_contribution.rst  05_references.rst  api.rst  conf.py  consistency_checking.rst  contribution.rst  ehg.rst  ga4.html  getting_started.rst  index.rst  installation.rst  interpretation_of_results.rst  introduction.rst  references.rst  requirements.txt  retina.rst  specifying_datasets.rst  use_cases.rst
legacy/: _aggregated_mor.py  _aggregation.py  _bounds.py  _calculate_scores.py  _check_1_dataset_kfold_scores.py  _check_1_dataset_unknown_folds_mos_acc_score.py  _check_individual_scores.py  _check_n_datasets_kfold_scores.py  _dataset2.py  _problem_generator.py  _symbolic_interval.py  test_1_dataset_kfold_scores.py  test_1_dataset_unknown_folds_mos_acc_score.py  test_aggregation.py  test_symbolic_interval.py  test_use_case_3_dataset_rom_kfold_rom.py  test_use_case_4_kfold_mor.py  test_use_case_7_dataset_mor_kfold_mor.py
mlscorecheck/: __init__.py  _version.py
mlscorecheck/aggregated/: __init__.py  _aggregation.py  _calculate_scores.py  _check_aggregated_scores.py  _dataset.py  _evaluation.py  _experiment.py  _fold.py  _fold_enumeration.py  _folding.py  _folding_utils.py  _folds.py  _generate_problems.py  _linear_programming.py  _problem_generator.py  _utils.py
mlscorecheck/auc/: 07-experiment.ipynb  __init__.py  _acc_aggregated.py  _acc_single.py  _analytic.py  _auc.py  _auc_aggregated.py  _auc_aggregation.py  _auc_single.py  _max_acc_aggregated.py  _utils.py
mlscorecheck/bundles/: __init__.py  _ehg.py  _melanoma.py  _retina_drive.py
mlscorecheck/check/: __init__.py  _check_1_dataset_kfold_mor_acc_score.py  _check_1_dataset_kfold_mor_scores.py  _check_1_dataset_kfold_mor_unknown_folds_scores.py  _check_1_dataset_kfold_rom_scores.py  _check_1_dataset_kfold_scores.py  _check_1_dataset_kfold_som_scores.py  _check_1_dataset_known_folds_mor_scores.py  _check_1_dataset_known_folds_mos_scores.py  _check_1_dataset_unknown_folds_mor_acc_score.py  _check_1_dataset_unknown_folds_mor_scores.py  _check_1_dataset_unknown_folds_mos_acc_score.py  _check_1_dataset_unknown_folds_mos_scores.py  _check_1_testset_no_kfold_scores.py  _check_n_datasets_kfold_scores.py  _check_n_datasets_mor_kfold_mor_scores.py  _check_n_datasets_mor_kfold_rom_scores.py  _check_n_datasets_mor_known_folds_mor_scores.py  _check_n_datasets_mor_unknown_folds_mor_scores.py  _check_n_datasets_mos_kfold_som_scores.py  _check_n_datasets_mos_known_folds_mos_scores.py  _check_n_datasets_mos_unknown_folds_mos_scores.py  _check_n_datasets_rom_kfold_rom_scores.py  _check_n_datasets_som_kfold_som_scores.py  _check_n_testsets_mos_no_kfold_scores.py  _check_n_testsets_som_no_kfold_scores.py  _check_scores.py
mlscorecheck/core/: __init__.py  _aggregated_assemble_results.py  _aggregated_mor.py  _aggregated_rom.py  _aggregated_rom.py.bak  _algebra.py  _check.py  _dict.py  _expression.py  _folds.py  _individual.py  _interval.py  _load_json.py  _logger.py  _numerical_tolerance.py  _random_state.py  _rounding.py  _safe_eval.py  _score_loaders.py  _score_objects.py  _scores.py  _scores.py.bak  _scores_standardized.py  _solutions.py  _solver.py  _symbolic_interval.py  _sympy.py  scores.json  solutions.json
mlscorecheck/datasets/: _load_datasets.py
mlscorecheck/experiments/: __init__.py  _load_datasets.py  _load_experiments.py
mlscorecheck/individual/: __init__.py  _calculate_scores.py  _check.py  _check_score_pairs.py  _check_scores_tptn.py  _check_tptn_solutions.py  _complex_interval.py  _expression.py  _helper.py  _interval.py  _pair_solutions.py  _problem_generator.py  _score_loaders.py  _scores.py  _scores_standardized.py  _solutions.py  _tptn_solution_bundles.py  _tptn_solutions.py  _utils.py  solutions.json  tptn_solutions.json
mlscorecheck/machine_learning/: __init__.py  _solutions.py  _solvers.py
mlscorecheck/scores/: __init__.py  _calculate_score.py.bak  _calculate_scores.py  _multiclass_scores.py  _score_bundles.py  _scores.py  _scores_standardized.py  scores.json
mlscorecheck/symbolic/: __init__.py  _algebra.py  _availability.py  _sage_algebra.py  _score_objects.py  _solver.py  _symbols.py  _sympy_algebra.py
mlscorecheck/utils/: __init__.py  _problem_generator.py  _solver.py
notebooks/: Untitled-1.ipynb
notebooks/auc_experiments/: 00-integrals.ipynb  00-intervals-acc.ipynb  00_intervals-auc-kfold.ipynb  00_intervals-auc.ipynb  01-experiment-aggregated-not-stratified.ipynb  01-experiment-aggregated.ipynb  01-experiment-single.ipynb  02-exponential-fit.ipynb  02-processing-aggregated.ipynb  02-processing.ipynb  03-auc-test-aggregated-not-stratified.ipynb  03-auc-test-aggregated.ipynb  03-auc-test.ipynb  03-estimates.ipynb  03-results-intervals.ipynb  03-results-midpoints.ipynb  04-midpoints.ipynb  04-processing-kfold.ipynb  04-processing.ipynb  04-results-intervals-table.ipynb  05-application-retinal-vessel.ipynb  05-results-aggregated.ipynb  05-results-intervals-table.ipynb  05-results-intervals.ipynb  05-results-midpoints-table.ipynb  05-results-midpoints.ipynb  05-results-table.ipynb  05-results.ipynb  06-illustration.ipynb  06-pytorch.ipynb  10-exponential-fit-illustration.ipynb  11-midpoint-illustration.ipynb  config.py  p0.eps  p1.eps  p2.eps  p3.eps  p5.eps  xx-00_intervals-auc.ipynb  xx-01-experiment-aggregated-not-stratified.ipynb  (+7 more)
notebooks/development/: 000_interval_computing.ipynb  001_symbolic.ipynb  002_ml_scores.ipynb  003_check.ipynb  004_generate_solutions.ipynb  005-sympy-test.ipynb  005_special.ipynb  006_fm_gm.ipynb  006_fm_mk.ipynb  006_fm_upm.ipynb  009-objects.ipynb  (+58 more)
(+353 files in other folders)
